# alphoko

./: Cargo.toml  README.md  manga-panels.db
src/: app.rs  db.rs  main.rs
src/ui/: central_panel.rs  common.rs  constants.rs  side_panel.rs  top_panel.rs
