[package]
name = "alphoko"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.32.0" }
egui_extras = { version = "0.32.0", features = ["default", "all_loaders"] }
rfd = { version = "0.15.3" }
image = { version = "0.25.6", features = ["jpeg", "png"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
